apps/monitoring/victoriametrics/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: victoriametrics
  namespace: monitoring
  labels:
    app: victoriametrics
    app.kubernetes.io/name: victoriametrics
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: victoriametrics
      app.kubernetes.io/name: victoriametrics
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: victoriametrics
        app.kubernetes.io/name: victoriametrics
        app.kubernetes.io/instance: victoriametrics-prod
        app.kubernetes.io/component: victoriametrics
        app.kubernetes.io/part-of: monitoring
      annotations:
        prometheus.io/port: "8880"
        prometheus.io/scrape: "true"
    spec:
      securityContext:
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: victoriametrics
          image: victoriametrics/victoria-metrics:v1.153.0
          imagePullPolicy: IfNotPresent
          args:
            - "--storageDataPath=/storage"
            - "--httpListenAddr=:8428"
            - "--retentionPeriod=6"
            - "--maxConcurrentInserts=64"
          ports:
            - containerPort: 8428
              name: "victoriametrics"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 65532
            runAsGroup: 65532
            privileged: false
            seccompProfile:
              type: "RuntimeDefault"
            capabilities:
              drop:
                - "ALL"
          resources:
            requests:
              memory: "512Mi"
              cpu: "50m"
            limits:
              memory: "2Gi"
          livenessProbe:
            httpGet:
              path: "/-/healthy"
              port: "victoriametrics"
          readinessProbe:
            httpGet:
              path: "/-/ready"
              port: "victoriametrics"
          volumeMounts:
            - name: "storage"
              mountPath: "/storage"
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: "app.kubernetes.io/part-of"
                      operator: "In"
                      values:
                        - "monitoring"
                topologyKey: "kubernetes.io/hostname"
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 50
              preference:
                matchExpressions:
                  - key: "location"
                    operator: "NotIn"
                    values:
                      - "ez"
            - weight: 10
              preference:
                matchExpressions:
                  - key: cpu_speed
                    operator: NotIn
                    values:
                      - slow
      volumes:
        - name: storage
          emptyDir: {}
