apps/monitoring/victoriametrics/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: victoriametrics
  namespace: monitoring
spec:
  selector:
    app: victoriametrics
  ports:
    - port: 80
      targetPort: victoriametrics
